@@ -3,7 +3,8 @@
 
 2006-07-09  Alex Schumann  <rubin@afternet.org>
 
-	* src/nickserv.c: Fixes for addignore/delignore corruption
+	* src/nickserv.c: Fixes for addignore/delignore corruption +missed a
+	spot
 
 2006-07-10  Neil Spierling <sirvulcan@gmail.com>
 
